# event-management

./: .env  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  conn.py  docker-compose.yml  init-keycloak-db.sh  init-keycloak-db.sql  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 1f53dfb14396_added_unique_constraint_on_event.py  367fb1e8c29c_added_version_on_event_table.py  459a25099614_updated_events_table.py  4baeeb73f8c9_added_unique_constraint_on_user.py  ad09d94ffe59_add_seed_data.py  b0261c1e5105_first_revision.py  b1a8f6d0eac5_updated_payment_table.py  d76ae127b951_added_constraints_on_payments_table.py  e913e1718f21_initial_migration.py  f71b7f69f1f4_updated_keycloak_id_nullablity_.py
documents/: Elastic Event Platform Presentation.pptx  SDE Project Code Documentation.docx
event_manager/: .env  .flake8  .gitignore  alembic.ini  main.py
event_manager/core/: config.py  database.py
event_manager/dal/: booking.py  company.py  crud_manager.py  event.py  payment.py  user.py
event_manager/errors/: all_errors.py
event_manager/keycloak/: crud.py  exceptions.py  permission_definitions.py  permissions.py  security.py  utils.py
event_manager/models/: __init__.py  base.py  booking.py  company.py  event.py  payment.py  user.py
event_manager/payment_gateway/: __init__.py  abstract_payment_gateway.py  stripe_payment.py
event_manager/schemas/: booking.py  company.py  event.py  payment.py  token.py  user.py
event_manager/tests/: conftest.py  test_bookings.py  test_events.py  test_users.py
postgres-init/: init.sql
(+7 files in other folders)
