[tool.poetry]
name = "event-management"
version = "0.1.0"
description = "A event manager from where user can see and book events."
authors = ["Aryan Kumar <kumarayan86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
SQLAlchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
faker = "^26.0.0"
sqlalchemy-utils = "^0.41.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
