[tool.poetry]
name = "event-management"
version = "0.1.0"
description = "A event manager from where user can see and book events."
authors = ["Aryan Kumar <kumarayan86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
SQLAlchemy = {version = "^2.0.31", extras = ["asyncio"]}
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
faker = "^26.0.0"
sqlalchemy-utils = "^0.41.2"
pydantic-settings = "^2.3.4"
asyncpg = "^0.29.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
